[tool.poetry]
name = "cover-letter-generation"
version = "0.1.0"
description = "cover letter creation"
authors = [
    "Diogo <peter.parker@web.com>",
]
readme = "README.md"
documentation = "https://3lueLightning.github.io/cover-letter-generation"
repository = "https://github.com/3lueLightning/cover-letter-generation"

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

# Standardized Developer Workflow Orchestration
cruft = {extras = ["pyproject"], version = "^2.15.0"} # Automated Cookiecutter template synchronization

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

#
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.14"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
pymdown-extensions = "^10.7"
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.virtualenvs]
in-project = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src"]
